<resources>
    <string name="app_name">TECH TALK</string>
    <string name="game_view_content_description">Game View</string>
    <string name="slogan">Speech Therapy At Your Home!</string>
    <string name="btn1.1">GET STARTED</string>
    <string name="btn1.2">I\'VE AN ACCOUNT</string>
    <string name="btn3.1">REGISTER</string>
    <string name="btn4.1">SIGN IN</string>
    <string name="btnGame">Game Play</string>
    <string name="btn_card.1">Continue</string>
    <string name="btn_card.2">Check</string>
    <string name="text1">Enter Your Information</string>
    <string name="text2">Username</string>
    <string name="text3">Password</string>
    <string name="text4">By signing in to TECH TALK, you agree to our Terms &amp; Privacy Policy.</string>
    <string name="text5">Settings</string>
    <string name="text6">Log Out</string>
    <string name="text7">Correct Pronunciation</string>
    <string name="text8">New Word</string>
    <string name="text9">Create Your Account</string>
    <string name="text10">Email Address</string>
    <string name="text11">Confirm Password</string>
    <string name="text12">Gender</string>
    <string name="text13">New Word</string>
    <string name="text14">Listen the correct pronunciation</string>
    <string name="text15">Word Pronunciation</string>
    <string name="text16">Word Recording</string>
    <string name="text17">Speak this Word</string>
    <string name="text18">Click the Microphone</string>
    <string name="text19">Word Accuracy</string>
    <string name="text20">%</string>
    <string name="text21">Image</string>
    <string name="text22">Video</string>
    <string name="text23">Hello!</string>
    <string name="text24">What do you want to learn today?</string>
    <string name="text25">Choose your Lesson &amp; Practise!</string>
    <string name="text26">Urdu</string>
    <string name="text27">Daily Exercise</string>
    <string name="text28">Lip Trills</string>
    <string name="text29">Fish Pout</string>
    <string name="text30">Cheek Puffing</string>
    <string name="text31">Lip Smacking</string>
    <string name="text32">O Position</string>
    <string name="text33">Paper Holding</string>
    <string name="text34">Suck &amp; Blow</string>
    <string name="text35">Mmmm with Raised Pitch</string>
    <string name="text36">Fish Smacking</string>
    <string name="text37">Time: 30 secs</string>
    <string name="card1.0">Alphabet</string>
    <string name="card1.1">حروف تہجی</string>
    <string name="card1.2">36 Levels</string>
    <string name="card2.0">Numbers</string>
    <string name="card2.1">اعداد</string>
    <string name="card2.2">10 Levels</string>
    <string name="card3.0">Days of Week</string>
    <string name="card3.1">ہفتے کے دن</string>
    <string name="card3.2">7 Levels</string>
    <string name="card4.0">Times of Day</string>
    <string name="card4.1">دن کے اوقات</string>
    <string name="card4.2">5 Levels</string>
    <string name="card5.0">Seasons</string>
    <string name="card5.1">موسم</string>
    <string name="card5.2">4 Levels</string>
    <string name="card6.0">Basic</string>
    <string name="card6.1">بنیادی</string>
    <string name="card6.2">6 Levels</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>