<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_33sdp"
        android:text="@string/text9"
        android:textSize="@dimen/_15ssp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_60ssp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn3_back"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_23sdp"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/et3_email"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_46sdp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_mail"
        android:drawablePadding="@dimen/_10sdp"
        android:ems="10"
        android:hint="@string/text10"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textSize="@dimen/_17ssp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txt"
        app:layout_constraintHorizontal_bias="0.495"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/et3_username"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_person"
        android:drawablePadding="@dimen/_10sdp"
        android:ems="10"
        android:hint="@string/text2"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_17ssp"
        android:layout_below="@+id/et3_email"
        app:layout_constraintHorizontal_bias="0.497"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et3_password"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock"
        android:drawablePadding="@dimen/_10sdp"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:hint="@string/text3"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@+id/et3_username"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/et3_cnfrmPass"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_cnfrm_pass"
        android:drawablePadding="@dimen/_10sdp"
        android:ems="10"
        android:hint="@string/text11"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textSize="@dimen/_17ssp"
        android:layout_below="@+id/et3_password"
        app:layout_constraintHorizontal_bias="0.497"
        tools:ignore="Autofill" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et3_cnfrmPass"/>

    <ImageView
        android:id="@+id/iv3_pic"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:contentDescription="@string/todo"
        android:src="@drawable/gender"
        android:layout_below="@id/spinner"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription,HardcodedText" />

    <Button
        android:id="@+id/btn3_register"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:background="@drawable/custom_input"
        android:backgroundTint="#D3D3D3"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn3.1"
        android:textColor="@color/light_blue"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_15ssp"
        android:layout_below="@+id/iv3_pic"
        app:layout_constraintHorizontal_bias="0.494" />

</RelativeLayout>