<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AudioActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:background="@color/white"
            android:src="@drawable/ic_back_icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_35sdp"
            android:text="@string/text15"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="@dimen/_360sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/text13"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/text14"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_aud"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_50sdp"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_volume"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/_35ssp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_img"
            android:layout_margin="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_230sdp"
            android:layout_gravity="center"
            android:src="@drawable/no_photo"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_video"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="match_parent"
            android:text="@string/text22"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_img"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="match_parent"
            android:text="@string/text21"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/btn_card.1" />

</RelativeLayout>